removing all the things that I don't think that I need from the angular-seed base

--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,13 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "classes visualization",
+  "description": "A attempt at an app",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
-  "license": "MIT",
+  "homepage": "https://github.com/echilds90/classes-visualization",
   "private": true,
   "dependencies": {
     "angular": "~1.5.0",
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "angular-mocks": "~1.5.0"
   }
 }
