--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
     "angular": "~1.5.0",
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0"
+    "angular-mocks": "~1.5.0",
+    "angular-moment": "~0.10.3",
+    "less": "^2.7.1"
   }
 }
